--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@
 *-venv/
 !projects/.gitkeep
 
+
+.gitignore
+bin/
+lib/
 # ------------------------------------------
 # GitHub Python .gitignore ruleset
 # ------------------------------------------
